vuejs/vuejs-tests/testData/highlighting/vIfRequireParameter/vIfRequireParameter.vue
<template><div <error descr="Vue: v-if/v-else-if is missing expression."><warning descr="v-if requires value">v-if</warning></error>></div></template>